[package]
name = "raspi_clock"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.43"
chrono = "0.4.19"
embedded-hal = "0.2.5"
gpio-cdev = "0.4.0"
lazy_static = "1.4.0"
max7219 = "0.3.1"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sled = "0.34.6"
tokio = "1.10.0"
